src/objects/ffbc__PlanLineItem__c.object
<CustomObject>
    <customHelpPage>ffbc__planlineitemhelp</customHelpPage>
    <description>Contains the details of the products and price plans that you can create a contract from.</description>
    <fields>
        <fullName>ffbc__BillingType__c</fullName>
        <description>The type of billing for this plan line item.</description>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring Fixed</fullName>
                </value>
                <value>
                    <fullName>Recurring Variable</fullName>
                </value>
                <value>
                    <fullName>One-off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbc__Description__c</fullName>
        <description>Description of the plan line item.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffbc__IsRecurring__c</fullName>
        <description>Indicates whether the plan line item applies to every term in the plan.</description>
        <formula>NOT(ISPICKVAL(ffbc__BillingType__c, &apos;One-off&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the plan line item applies to every term in the plan.</inlineHelpText>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffbc__Plan__c</fullName>
        <description>Plan to which this plan line item belongs</description>
        <label>Plan</label>
        <referenceTo>ffbc__Plan__c</referenceTo>
        <relationshipLabel>Plan Line Items</relationshipLabel>
        <relationshipName>PlanLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffbc__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the product or service to which this plan relates.</description>
        <label>Product or Service</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Related Plan Line Items</relationshipLabel>
        <relationshipName>PlanLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Quantity of the product or service being purchased. You must enter a value if a fixed Billing Type is selected.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffbc__SalesPrice__c</fullName>
        <description>Total price for the plan line item. The Sale Price is calculated using the formula: Quantity x Unit Price.</description>
        <formula>ffbc__Quantity__c * ffbc__UnitPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ffbc__UnitOfMeasure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the unit of measure used to determine customer usage on this plan line item.</description>
        <label>Unit Of Measure</label>
        <referenceTo>ffbc__UnitOfMeasure__c</referenceTo>
        <relationshipLabel>Related Plan Line Items</relationshipLabel>
        <relationshipName>PlanLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffbc__UnitPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Price of one item for the plan line item. This is used to calculate the Sales Price.</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <label>Plan Line Item</label>
    <nameField>
        <displayFormat>PNLI{0000000000}</displayFormat>
        <label>Plan Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>